@@ -1,3 +1,7 @@
+Version 2009081201
+- Fool the idiotic CPAN testers running development versions of perl that
+  have been outdated for several Christmasses.
+----
 Version 2009040901
 - Modernized Makefile.PL
 - POD fixes.
